spade-tests/src/snapshots/spade_tests__integration__trait_tests__good_suggestion_for_missing_self_in_zero_arg_fn.snap
---
source: spade-tests/src/integration.rs
---
struct X {}

impl X {
    fn a() -> bool {true}
}


error: Method must take 'self' as the first parameter
  ┌─ testinput:4:9
  │
4 │     fn a() -> bool {true}
  │         ^^ Missing self
  │
  = Consider adding self
  │
4 │     fn a(self) -> bool {true}
  │          ++++


