spade-tests/src/snapshots/spade_tests__integration__trait_tests__impl_on_tuple_is_error.snap
---
source: spade-tests/src/integration.rs
---
impl (bool, bool) {}


error: Unexpected `(`, expected `Identifier`
  ┌─ testinput:1:6
  │
1 │ impl (bool, bool) {}
  │      ^ expected `Identifier`
