spade-tests/src/snapshots/spade_tests__integration__trait_tests__impls_require_correct_signature_wrong_arg_type.snap
---
source: spade-tests/src/integration.rs
---
trait X {
    fn a(self, x: bool) -> bool;
}

struct A {}

impl X for A {
    fn a(self, x: int<10>) -> bool {
        true
    }
}


error: Argument type mismatch
  ┌─ testinput:8:19
  │
2 │     fn a(self, x: bool) -> bool;
  │                   ---- Because of the type of x in the trait
  ·
8 │     fn a(self, x: int<10>) -> bool {
  │                   ^^^^^^^ Expected bool
