spade-tests/src/snapshots/spade_tests__integration__trait_tests__impls_require_correct_signature_wrong_return_type.snap
---
source: spade-tests/src/integration.rs
---
trait X {
    fn a(self) -> int<10>;
}

struct A {}

impl X for A {
    fn a(self) -> bool {
        true
    }
}


error: Return type does not match trait
  ┌─ testinput:8:19
  │
2 │     fn a(self) -> int<10>;
  │                   ------- To match the trait
  ·
8 │     fn a(self) -> bool {
  │                   ^^^^ Expected int<10>
